fix(accessibility): review and correct alt texts, aria labels, and semantic markup

--- a/everwell-PROMs-and-trends/index.html
+++ b/everwell-PROMs-and-trends/index.html
@@ -49,6 +49,7 @@
             viewBox="0 0 46 46"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
+            aria-hidden="true"
           >
             <path
               d="M8 0.5H38C42.1421 0.5 45.5 3.85786 45.5 8V38C45.5 42.1421 42.1421 45.5 38 45.5H8C3.85786 45.5 0.5 42.1421 0.5 38V8C0.500001 3.85786 3.85787 0.5 8 0.5Z"
@@ -92,6 +93,7 @@
           viewBox="0 0 46 46"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          aria-hidden="true"
         >
           <path
             d="M8 0.5H38C42.1421 0.5 45.5 3.85786 45.5 8V38C45.5 42.1421 42.1421 45.5 38 45.5H8C3.85786 45.5 0.5 42.1421 0.5 38V8C0.500001 3.85786 3.85787 0.5 8 0.5Z"
@@ -152,6 +154,7 @@
                         alt=""
                         width="38"
                         height="38"
+                        aria-hidden="true"
                     /></span>
                     <span class="jump-menu__label">Overview</span>
                     <span class="jump-menu__arrow-bg"
@@ -160,6 +163,7 @@
                         alt=""
                         width="16"
                         height="16"
+                        aria-hidden="true"
                     /></span>
                   </a>
                 </li>
@@ -171,6 +175,7 @@
                         alt=""
                         width="38"
                         height="38"
+                        aria-hidden="true"
                     /></span>
                     <span class="jump-menu__label">Solution</span>
                     <span class="jump-menu__arrow-bg"
@@ -179,6 +184,7 @@
                         alt=""
                         width="16"
                         height="16"
+                        aria-hidden="true"
                     /></span>
                   </a>
                 </li>
@@ -190,6 +196,7 @@
                         alt=""
                         width="38"
                         height="38"
+                        aria-hidden="true"
                     /></span>
                     <span class="jump-menu__label">Designs</span>
                     <span class="jump-menu__arrow-bg"
@@ -198,6 +205,7 @@
                         alt=""
                         width="16"
                         height="16"
+                        aria-hidden="true"
                     /></span>
                   </a>
                 </li>
@@ -209,6 +217,7 @@
                         alt=""
                         width="38"
                         height="38"
+                        aria-hidden="true"
                     /></span>
                     <span class="jump-menu__label">Impact</span>
                     <span class="jump-menu__arrow-bg"
@@ -217,6 +226,7 @@
                         alt=""
                         width="16"
                         height="16"
+                        aria-hidden="true"
                     /></span>
                   </a>
                 </li>
@@ -228,6 +238,7 @@
                         alt=""
                         width="38"
                         height="38"
+                        aria-hidden="true"
                     /></span>
                     <span class="jump-menu__label">Learnings</span>
                     <span class="jump-menu__arrow-bg"
@@ -236,6 +247,7 @@
                         alt=""
                         width="16"
                         height="16"
+                        aria-hidden="true"
                     /></span>
                   </a>
                 </li>
@@ -254,7 +266,7 @@
           <figure class="case-image__wrapper case-image__wrapper-top">
             <img
               src="../assets/images/Trends_Top_Of_Page.gif"
-              alt="Project hero screen, desktop and mobile"
+              alt="Animated Everwell dashboard showing a patient’s physical health trend line gradually building over six months"
               class="case-image__image reveal"
             />
           </figure>
@@ -505,6 +517,7 @@
                         class="design-northstar-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="design-northstar-card__text">
@@ -522,6 +535,7 @@
                         class="design-northstar-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="design-northstar-card__text">
@@ -540,6 +554,7 @@
                         class="design-northstar-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="design-northstar-card__text">
@@ -559,6 +574,7 @@
                         class="design-northstar-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="design-northstar-card__text">
@@ -589,6 +605,7 @@
                         class="design-northstar-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="design-northstar-card__text">
@@ -605,6 +622,7 @@
                         class="design-northstar-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="design-northstar-card__text">
@@ -622,6 +640,7 @@
                         class="design-northstar-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="design-northstar-card__text">
@@ -656,6 +675,7 @@
                         class="design-northstar-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="design-northstar-card__text">
@@ -672,6 +692,7 @@
                         class="design-northstar-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="design-northstar-card__text">
@@ -705,7 +726,7 @@
               <div class="case-highlights__visual reveal visible">
                 <img
                   src="../assets/images/3_2.png"
-                  alt="an image of the notification card"
+                  alt="Everwell provider dashboard home screen showing clinic overview with patient alerts, upcoming appointments, and summary statistics"
                   class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--900 case-highlights__visual-image--large img-bdr-btm reveal visible"
                 />
               </div>
@@ -759,7 +780,7 @@
                 <!-- Big image -->
                 <img
                   src="../assets/images/3_3.png"
-                  alt="Screenshot of the main feature"
+                  alt="Everwell provider Patients dashboard displaying patient list with alerts, PROM status, and quick filters for total patients, overdue forms, and pending invites"
                   class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--large img-bdr-btm reveal"
                 />
 
@@ -772,7 +793,7 @@
                   >
                     <img
                       src="../assets/images/3_3-1.png"
-                      alt="Digital Buddies program preview"
+                      alt="Alert card showing 12 patient records that need attention"
                     />
                   </div>
                   <div
@@ -785,6 +806,7 @@
                         class="case-widget-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <div class="case-widget-card__content">
@@ -831,7 +853,7 @@
                 <!-- Big image -->
                 <img
                   src="../assets/images/Patient_profile.gif"
-                  alt="Screenshot of the main feature"
+                  alt="Everwell patient profile for Hannah Johnson showing physical and mental health trend lines over six months, clinical insights, and general information"
                   class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--large img-bdr-btm reveal"
                 />
 
@@ -844,7 +866,7 @@
                   >
                     <img
                       src="../assets/images/3_4-1.png"
-                      alt="Digital Buddies program preview"
+                      alt="Example of a clinical insights panel in the Everwell app showing summarized health metrics and compliance information."
                     />
                   </div>
                   <div
@@ -857,6 +879,7 @@
                         class="case-widget-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <div class="case-widget-card__content">
@@ -900,7 +923,7 @@
               <div class="case-highlights__visual reveal visible">
                 <img
                   src="../assets/images/Patient_trends.gif"
-                  alt="an image of the notification card"
+                  alt="Animated view of the Everwell patient trends dashboard showing health scores changing over time on a line chart."
                   class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--900 case-highlights__visual-image--large reveal img-bdr-btm visible"
                 />
               </div>
@@ -931,7 +954,7 @@
               <div class="case-highlights__visual reveal visible">
                 <img
                   src="../assets/images/3_6.png"
-                  alt="an image of the notification card"
+                  alt="Everwell dashboard showing the Forms and PROMs page, where clinicians can review patient questionnaires, track completion status, and manage alerts or follow-up actions."
                   class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--900 case-highlights__visual-image--large img-bdr-btm reveal visible"
                 />
               </div>
@@ -965,7 +988,7 @@
                 >
                   <img
                     src="../assets/images/3_7.png"
-                    alt="Image for connected living, and who is jopining it"
+                    alt="Everwell mobile app screen showing a patient program titled 'Living Well with Thalassemia' with a list of upcoming health surveys and educational activities."
                     class="case-highlights__visual-image case-highlights__visual-image--wide img-bdr-btm reveal"
                   />
                 </div>
@@ -974,7 +997,7 @@
                 >
                   <img
                     src="../assets/images/3_8.png"
-                    alt="Image for connected living, and who is jopining it"
+                    alt="Everwell mobile app screen showing a health survey form titled 'Health and Daily Life Survey (SF-36)' where the user rates their general health using multiple-choice options."
                     class="case-highlights__visual-image case-highlights__visual-image--wide img-bdr-btm reveal"
                   />
                 </div>
@@ -1211,7 +1234,13 @@
     </footer>
 
     <button id="backToTop" class="back-to-top" aria-label="Back to top">
-      <svg viewBox="0 0 24 24" width="28" height="28">
+      <svg
+        viewBox="0 0 24 24"
+        width="28"
+        height="28"
+        aria-hidden="true"
+        focusable="false"
+      >
         <path
           d="M12 19V5M5 12l7-7 7 7"
           stroke="white"
