--- a/everwell-senior-solution/index.html
+++ b/everwell-senior-solution/index.html
@@ -50,6 +50,7 @@
             viewBox="0 0 46 46"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
+            aria-hidden="true"
           >
             <path
               d="M8 0.5H38C42.1421 0.5 45.5 3.85786 45.5 8V38C45.5 42.1421 42.1421 45.5 38 45.5H8C3.85786 45.5 0.5 42.1421 0.5 38V8C0.500001 3.85786 3.85787 0.5 8 0.5Z"
@@ -93,6 +94,7 @@
           viewBox="0 0 46 46"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          aria-hidden="true"
         >
           <path
             d="M8 0.5H38C42.1421 0.5 45.5 3.85786 45.5 8V38C45.5 42.1421 42.1421 45.5 38 45.5H8C3.85786 45.5 0.5 42.1421 0.5 38V8C0.500001 3.85786 3.85787 0.5 8 0.5Z"
@@ -154,6 +156,7 @@
                         alt=""
                         width="38"
                         height="38"
+                        aria-hidden="true"
                     /></span>
                     <span class="jump-menu__label">Overview</span>
                     <span class="jump-menu__arrow-bg"
@@ -162,6 +165,7 @@
                         alt=""
                         width="16"
                         height="16"
+                        aria-hidden="true"
                     /></span>
                   </a>
                 </li>
@@ -173,6 +177,7 @@
                         alt=""
                         width="38"
                         height="38"
+                        aria-hidden="true"
                     /></span>
                     <span class="jump-menu__label">Solution</span>
                     <span class="jump-menu__arrow-bg"
@@ -181,6 +186,7 @@
                         alt=""
                         width="16"
                         height="16"
+                        aria-hidden="true"
                     /></span>
                   </a>
                 </li>
@@ -192,6 +198,7 @@
                         alt=""
                         width="38"
                         height="38"
+                        aria-hidden="true"
                     /></span>
                     <span class="jump-menu__label">Designs</span>
                     <span class="jump-menu__arrow-bg"
@@ -200,6 +207,7 @@
                         alt=""
                         width="16"
                         height="16"
+                        aria-hidden="true"
                     /></span>
                   </a>
                 </li>
@@ -211,6 +219,7 @@
                         alt=""
                         width="38"
                         height="38"
+                        aria-hidden="true"
                     /></span>
                     <span class="jump-menu__label">Impact</span>
                     <span class="jump-menu__arrow-bg"
@@ -219,6 +228,7 @@
                         alt=""
                         width="16"
                         height="16"
+                        aria-hidden="true"
                     /></span>
                   </a>
                 </li>
@@ -230,6 +240,7 @@
                         alt=""
                         width="38"
                         height="38"
+                        aria-hidden="true"
                     /></span>
                     <span class="jump-menu__label">Learnings</span>
                     <span class="jump-menu__arrow-bg"
@@ -238,6 +249,7 @@
                         alt=""
                         width="16"
                         height="16"
+                        aria-hidden="true"
                     /></span>
                   </a>
                 </li>
@@ -256,7 +268,7 @@
           <figure class="case-image__wrapper">
             <img
               src="../assets/images/case2_image1.jpg"
-              alt="Project hero screen, desktop and mobile"
+              alt="Everwell app screen showing the Connected Living program for seniors, with wellness activities and self-assessments designed to support independent living."
               class="case-image__image reveal"
             />
           </figure>
@@ -431,6 +443,7 @@
                         alt=""
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                   </span>
@@ -459,6 +472,7 @@
                         alt=""
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                   </span>
@@ -472,7 +486,7 @@
                 <!-- Third picture: Social health -->
                 <img
                   src="../assets/images/case2_socialHealth.png"
-                  alt="App screenshot: Social Health"
+                  alt="App screenshot:Social Health as a part of the user's library "
                   class="case-howmightwe__visual-image reveal"
                 />
 
@@ -485,6 +499,7 @@
                         alt=""
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                   </span>
@@ -509,6 +524,7 @@
                         class="feedback-quote__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="feedback-quote__text">
@@ -524,6 +540,7 @@
                         class="feedback-quote__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="feedback-quote__text"
@@ -539,6 +556,7 @@
                         class="feedback-quote__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="feedback-quote__text"
@@ -554,6 +572,7 @@
                         class="feedback-quote__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="feedback-quote__text"
@@ -591,6 +610,7 @@
                         class="design-northstar-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="design-northstar-card__text">
@@ -606,6 +626,7 @@
                         class="design-northstar-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="design-northstar-card__text">
@@ -621,6 +642,7 @@
                         class="design-northstar-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="design-northstar-card__text">
@@ -637,6 +659,7 @@
                         class="design-northstar-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="design-northstar-card__text">
@@ -652,6 +675,7 @@
                         class="design-northstar-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <span class="design-northstar-card__text">
@@ -686,8 +710,8 @@
                       >
                         <path
                           d="M12 20.7031H21
-       M16.5 4.20335C16.8978 3.80553 17.4374 3.58203 18 3.58203C18.2786 3.58203 18.5544 3.6369 18.8118 3.74351C19.0692 3.85011 19.303 4.00637 19.5 4.20335C19.697 4.40033 19.8532 4.63419 19.9598 4.89156C20.0665 5.14893 20.1213 5.42478 20.1213 5.70335C20.1213 5.98193 20.0665 6.25778 19.9598 6.51515C19.8532 6.77252 19.697 7.00637 19.5 7.20335L7 19.7034L3 20.7034L4 16.7034L16.5 4.20335Z
-       M15 5.70312L18 8.70312"
+                            M16.5 4.20335C16.8978 3.80553 17.4374 3.58203 18 3.58203C18.2786 3.58203 18.5544 3.6369 18.8118 3.74351C19.0692 3.85011 19.303 4.00637 19.5 4.20335C19.697 4.40033 19.8532 4.63419 19.9598 4.89156C20.0665 5.14893 20.1213 5.42478 20.1213 5.70335C20.1213 5.98193 20.0665 6.25778 19.9598 6.51515C19.8532 6.77252 19.697 7.00637 19.5 7.20335L7 19.7034L3 20.7034L4 16.7034L16.5 4.20335Z
+                            M15 5.70312L18 8.70312"
                           fill="none"
                           stroke="currentColor"
                           stroke-width="1.5"
@@ -746,10 +770,10 @@
                       >
                         <path
                           d="M12 3.70312L10.088 9.51612C9.99015 9.81363 9.82379 10.084 9.60234 10.3055C9.38088 10.5269 9.11051 10.6933 8.813 10.7911L3 12.7031L8.813 14.6151C9.11051 14.713 9.38088 14.8793 9.60234 15.1008C9.82379 15.3222 9.99015 15.5926 10.088 15.8901L12 21.7031L13.912 15.8901C14.0099 15.5926 14.1762 15.3222 14.3977 15.1008C14.6191 14.8793 14.8895 14.713 15.187 14.6151L21 12.7031L15.187 10.7911C14.8895 10.6933 14.6191 10.5269 14.3977 10.3055C14.1762 10.084 14.0099 9.81363 13.912 9.51612L12 3.70312Z
-       M5 3.70312V7.70312
-       M19 17.7031V21.7031
-       M3 5.70312H7
-       M17 19.7031H21"
+                            M5 3.70312V7.70312
+                            M19 17.7031V21.7031
+                            M3 5.70312H7
+                            M17 19.7031H21"
                           fill="none"
                           stroke="currentColor"
                           stroke-width="1.5"
@@ -822,6 +846,7 @@
                           class="case-widget-card__icon"
                           width="24"
                           height="24"
+                          aria-hidden="true"
                         />
                       </span>
                       <div class="case-widget-card__content">
@@ -853,6 +878,7 @@
                         class="case-widget-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <div class="case-widget-card__content">
@@ -870,7 +896,7 @@
                   <img
                     class="case-widget-card case-widget-card--no-padding case-widget-card-no-margin reveal"
                     src="../assets/images/reports&trends.png"
-                    alt="Digital Buddies program preview"
+                    alt="Reports and trends card"
                     class="case-widget-card__feature-img"
                   />
                 </div>
@@ -899,7 +925,7 @@
               >
                 <img
                   src="../assets/images/Library_2.png"
-                  alt="Background image with space for History and bookmarks card"
+                  alt="Everwell resource library screen showing articles and activities for seniors on topics like friendship, mindfulness, and fitness, grouped under categories such as social health and staying fit."
                   class="case-highlights__visual-image case-highlights__visual-image--bg reveal"
                 />
                 <!-- Overlay card -->
@@ -913,6 +939,7 @@
                       class="case-widget-card__icon"
                       width="24"
                       height="24"
+                      aria-hidden="true"
                     />
                   </span>
                   <div class="case-widget-card__content">
@@ -953,7 +980,7 @@
                 >
                   <img
                     src="../assets/images/Notifications_3.png"
-                    alt="an image of the notification card"
+                    alt="Screen of the notification card"
                     class="case-highlights__visual-image case-highlights__visual-image--wide reveal img-bdr-btm"
                   />
                 </div>
@@ -983,7 +1010,7 @@
                 >
                   <img
                     src="../assets/images/Why_Friendships_Matter_4_1.png"
-                    alt="Image of Why friendship matters for our health"
+                    alt="Screen of an individual resoures page as part of the user's library"
                     class="case-highlights__visual-image case-highlights__visual-image--wide img-bdr-btm"
                   />
                 </div>
@@ -1003,6 +1030,7 @@
                           class="case-widget-card__icon"
                           width="24"
                           height="24"
+                          aria-hidden="true"
                         />
                       </span>
                       <div class="case-widget-card__content">
@@ -1021,7 +1049,7 @@
                   <img
                     class="case-widget-card case-widget-card--no-padding"
                     src="../assets/images/Why_Friendships_Matter_Audio_4_2.png"
-                    alt="Image showing a mp3 player"
+                    alt="Screen: mp3 player with library materials"
                     class="case-widget-card__feature-img"
                   />
                   <!-- </div> -->
@@ -1035,6 +1063,7 @@
                         class="case-widget-card__icon"
                         width="24"
                         height="24"
+                        aria-hidden="true"
                       />
                     </span>
                     <div class="case-widget-card__content">
@@ -1050,7 +1079,7 @@
                   <img
                     class="case-widget-card case-widget-card-no-margin case-widget-card--no-padding"
                     src="../assets/images/Did_you_find_this_useful_4_3.png"
-                    alt="image showing the short survey"
+                    alt="Screen: short survey"
                     class="case-widget-card__feature-img"
                   />
                 </div>
@@ -1077,7 +1106,7 @@
                 >
                   <img
                     src="../assets/images/Who_Joins_5_1.png"
-                    alt="Image for connected living, and who is jopining it"
+                    alt="Everwell app screen showing profile selection for Connected Living, where a user can choose an existing profile or create a new one to continue."
                     class="case-highlights__visual-image case-highlights__visual-image--wide img-bdr-btm reveal"
                   />
                 </div>
@@ -1086,7 +1115,7 @@
                 >
                   <img
                     src="../assets/images/Profiles_5_2.png"
-                    alt="Image for connected living, and who is joining it"
+                    alt="Everwell app settings screen showing user profile details and options like managing account, notifications, privacy, and support."
                     class="case-highlights__visual-image case-highlights__visual-image--wide img-bdr-btm reveal"
                   />
                 </div>
@@ -1114,7 +1143,7 @@
                 >
                   <img
                     src="../assets/images/ios.png"
-                    alt="an image of the ios on the phone"
+                    alt="Everwell iOS app home screen showing personalized health tasks, resources, and navigation tabs for Home, Programs, and Library."
                     class="case-highlights__visual-image case-highlights__visual-image--wide reveal"
                   />
                 </div>
@@ -1261,10 +1290,10 @@
                       >
                         <path
                           d="M12 3.70312L10.088 9.51612C9.99015 9.81363 9.82379 10.084 9.60234 10.3055C9.38088 10.5269 9.11051 10.6933 8.813 10.7911L3 12.7031L8.813 14.6151C9.11051 14.713 9.38088 14.8793 9.60234 15.1008C9.82379 15.3222 9.99015 15.5926 10.088 15.8901L12 21.7031L13.912 15.8901C14.0099 15.5926 14.1762 15.3222 14.3977 15.1008C14.6191 14.8793 14.8895 14.713 15.187 14.6151L21 12.7031L15.187 10.7911C14.8895 10.6933 14.6191 10.5269 14.3977 10.3055C14.1762 10.084 14.0099 9.81363 13.912 9.51612L12 3.70312Z
-       M5 3.70312V7.70312
-       M19 17.7031V21.7031
-       M3 5.70312H7
-       M17 19.7031H21"
+                            M5 3.70312V7.70312
+                            M19 17.7031V21.7031
+                            M3 5.70312H7
+                            M17 19.7031H21"
                           fill="none"
                           stroke="currentColor"
                           stroke-width="1.5"
@@ -1440,7 +1469,13 @@
       </div>
     </footer>
     <button id="backToTop" class="back-to-top" aria-label="Back to top">
-      <svg viewBox="0 0 24 24" width="28" height="28">
+      <svg
+        viewBox="0 0 24 24"
+        width="28"
+        height="28"
+        aria-hidden="true"
+        focusable="false"
+      >
         <path
           d="M12 19V5M5 12l7-7 7 7"
           stroke="white"
