--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -51,6 +51,7 @@
             viewBox="0 0 46 46"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
+            aria-hidden="true"
           >
             <path
               d="M8 0.5H38C42.1421 0.5 45.5 3.85786 45.5 8V38C45.5 42.1421 42.1421 45.5 38 45.5H8C3.85786 45.5 0.5 42.1421 0.5 38V8C0.500001 3.85786 3.85787 0.5 8 0.5Z"
@@ -94,6 +95,7 @@
           viewBox="0 0 46 46"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
+          aria-hidden="true"
         >
           <path
             d="M8 0.5H38C42.1421 0.5 45.5 3.85786 45.5 8V38C45.5 42.1421 42.1421 45.5 38 45.5H8C3.85786 45.5 0.5 42.1421 0.5 38V8C0.500001 3.85786 3.85787 0.5 8 0.5Z"
@@ -156,6 +158,7 @@
                         alt=""
                         width="38"
                         height="38"
+                        aria-hidden="true"
                     /></span>
                     <span class="jump-menu__label">Overview</span>
                     <span class="jump-menu__arrow-bg"
@@ -164,6 +167,7 @@
                         alt=""
                         width="16"
                         height="16"
+                        aria-hidden="true"
                     /></span>
                   </a>
                 </li>
@@ -175,6 +179,7 @@
                         alt=""
                         width="38"
                         height="38"
+                        aria-hidden="true"
                     /></span>
                     <span class="jump-menu__label">Solution</span>
                     <span class="jump-menu__arrow-bg"
@@ -183,6 +188,7 @@
                         alt=""
                         width="16"
                         height="16"
+                        aria-hidden="true"
                     /></span>
                   </a>
                 </li>
@@ -194,6 +200,7 @@
                         alt=""
                         width="38"
                         height="38"
+                        aria-hidden="true"
                     /></span>
                     <span class="jump-menu__label">Designs</span>
                     <span class="jump-menu__arrow-bg"
@@ -202,6 +209,7 @@
                         alt=""
                         width="16"
                         height="16"
+                        aria-hidden="true"
                     /></span>
                   </a>
                 </li>
@@ -213,6 +221,7 @@
                         alt=""
                         width="38"
                         height="38"
+                        aria-hidden="true"
                     /></span>
                     <span class="jump-menu__label">Impact</span>
                     <span class="jump-menu__arrow-bg"
@@ -221,6 +230,7 @@
                         alt=""
                         width="16"
                         height="16"
+                        aria-hidden="true"
                     /></span>
                   </a>
                 </li>
@@ -232,6 +242,7 @@
                         alt=""
                         width="38"
                         height="38"
+                        aria-hidden="true"
                     /></span>
                     <span class="jump-menu__label">Learnings</span>
                     <span class="jump-menu__arrow-bg"
@@ -240,6 +251,7 @@
                         alt=""
                         width="16"
                         height="16"
+                        aria-hidden="true"
                     /></span>
                   </a>
                 </li>
@@ -258,7 +270,7 @@
           <figure class="case-image__wrapper">
             <img
               src="../assets/images/Home-1.png"
-              alt="Interface overview of a pediatric ER triage screen with multiple symptom inputs and system decision"
+              alt="Digital check-in screen for Horizon Children’s Hospital showing a welcome message, estimated ER wait time, and option to start a quick intake screener."
               class="case-image__image"
             />
           </figure>
@@ -1174,6 +1186,7 @@
                       class="icon-box__icon"
                       width="24"
                       height="24"
+                      aria-hidden="true"
                     />
                   </span>
                   <span
@@ -1188,6 +1201,7 @@
                       class="icon-box__icon"
                       width="24"
                       height="24"
+                      aria-hidden="true"
                     />
                   </span>
                   <span
@@ -1205,6 +1219,7 @@
                       class="icon-box__icon"
                       width="24"
                       height="24"
+                      aria-hidden="true"
                     />
                   </span>
                   <span
@@ -1222,6 +1237,7 @@
                       class="icon-box__icon"
                       width="24"
                       height="24"
+                      aria-hidden="true"
                     />
                   </span>
                   <span
@@ -1268,10 +1284,10 @@
                     >
                       <path
                         d="M12 3.70312L10.088 9.51612C9.99015 9.81363 9.82379 10.084 9.60234 10.3055C9.38088 10.5269 9.11051 10.6933 8.813 10.7911L3 12.7031L8.813 14.6151C9.11051 14.713 9.38088 14.8793 9.60234 15.1008C9.82379 15.3222 9.99015 15.5926 10.088 15.8901L12 21.7031L13.912 15.8901C14.0099 15.5926 14.1762 15.3222 14.3977 15.1008C14.6191 14.8793 14.8895 14.713 15.187 14.6151L21 12.7031L15.187 10.7911C14.8895 10.6933 14.6191 10.5269 14.3977 10.3055C14.1762 10.084 14.0099 9.81363 13.912 9.51612L12 3.70312Z
-       M5 3.70312V7.70312
-       M19 17.7031V21.7031
-       M3 5.70312H7
-       M17 19.7031H21"
+                          M5 3.70312V7.70312
+                          M19 17.7031V21.7031
+                          M3 5.70312H7
+                          M17 19.7031H21"
                         fill="none"
                         stroke="currentColor"
                         stroke-width="1.5"
@@ -1448,7 +1464,13 @@
       </div>
     </footer>
     <button id="backToTop" class="back-to-top" aria-label="Back to top">
-      <svg viewBox="0 0 24 24" width="28" height="28">
+      <svg
+        viewBox="0 0 24 24"
+        width="28"
+        height="28"
+        aria-hidden="true"
+        focusable="false"
+      >
         <path
           d="M12 19V5M5 12l7-7 7 7"
           stroke="white"
