--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -1271,8 +1271,16 @@
               </p>
 
               <!-- Leveraging AI -->
-              <div class="insight-card add-small-margin-bottom reveal">
+              <div
+                id="leveraging-ai"
+                class="insight-card add-small-margin-bottom reveal"
+              >
                 <div class="insight-card__header">
+                  <div class="aurora-layer">
+                    <div class="aurora-blob aurora-blob--a"></div>
+                    <div class="aurora-blob aurora-blob--b"></div>
+                    <div class="aurora-blob aurora-blob--c"></div>
+                  </div>
                   <div class="icon-box icon-box-green">
                     <svg
                       class="icon-box__icon"
