style(cases): replace the icon in Problem menu item

--- a/everwell-PROMs-and-trends/index.html
+++ b/everwell-PROMs-and-trends/index.html
@@ -193,7 +193,7 @@
                   <a href="#nav-problem" class="jump-menu__link">
                     <span class="jump-menu__icon-bg"
                       ><img
-                        src="../assets/icons/solution.svg"
+                        src="../assets/icons/problem.svg"
                         alt=""
                         width="38"
                         height="38"
