enhance About page camera roll layout and fix background flicker

--- a/about/index.html
+++ b/about/index.html
@@ -448,7 +448,16 @@
 
               <!-- RIGHT COLUMN: vertical slideshow -->
               <!-- Card 8 -->
-              <div class="about-col about-col--right">
+              <div
+                class="about-card about-col about-col--right about-col--right-dec"
+              >
+                <h3 class="about-card__title">Peek into my camera roll 👇</h3>
+                <img
+                  src="../assets/icons/flower_blue.svg"
+                  alt=""
+                  class="carusel-flower"
+                  aria-hidden="true"
+                />
                 <div class="about-photo-slider">
                   <img
                     src="../assets/images/about_walking.jpg"
